test/oscar/compiler/errors/modMismatch.oscar
def main() => unit = {
  println(3.0 % 2.0);
}